# duckdb-delta

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: CloudTesting.yml  LocalTesting.yml  MainDistributionPipeline.yml
benchmark/micro/snapshot_performance/: delta_scan.benchmark  delta_scan_filter.benchmark  snapshot_no_pin.benchmark  snapshot_no_pin_filter.benchmark  snapshot_pin.benchmark  snapshot_pin_filter.benchmark
data/inlined/issue_303_partitioned/delta_lake/_delta_log/: _last_checkpoint
data/inlined/issue_303_partitioned/delta_lake/part=42/: part-00000-11caa99d-eb7e-4e4d-8115-163749c9c310-c000.snappy.parquet  part-00000-1285e5ec-5dcd-4d75-a622-f0a154872ff8-c000.snappy.parquet  part-00000-1842bb5f-31af-4baf-acb0-6ad63e72a626-c000.snappy.parquet  part-00000-75e8b4c5-5f6e-404a-b5b2-3e423a47417e-c000.snappy.parquet  part-00000-776f3463-38c1-400b-93a8-f8d22fb86289-c000.snappy.parquet  part-00000-87daa17e-840e-4408-9347-9e29fbeb8e32-c000.snappy.parquet  part-00000-89b63714-89f6-488d-a089-48fee4ae8a77-c000.snappy.parquet  part-00000-abcc7a43-2e0b-4c27-a603-0fec0979d55b-c000.snappy.parquet  part-00000-b3e88156-0bdb-4686-8bcf-a4417eff97c1-c000.snappy.parquet  part-00000-b5d957b1-f07f-416a-a150-6fa4684ea8e3-c000.snappy.parquet  part-00000-d4bdd985-affe-4a52-bcf4-a84b66e482cc-c000.snappy.parquet  part-00000-fae64a23-6a7c-44a8-97f2-5a5a508d1272-c000.snappy.parquet
data/inlined/null_constraints_lists/delta_lake/: part-00000-6033f0dd-d8f9-4c14-a1cf-63e4d7cd99d6-c000.snappy.parquet
data/inlined/null_constraints_structs/delta_lake/: part-00000-42dcea1c-7233-4eba-b277-2d2cbfb766b3-c000.snappy.parquet
data/inlined/simple_table/delta_lake/: part-00000.snappy.parquet
data/inlined/variant/basic/: .part-00000-d15cce28-44cb-44ec-9268-b32e6f541cf6-c000.snappy.parquet.crc  .part-00013-07cb15c1-6ec5-4743-8de5-7b7ae26a38c7-c000.snappy.parquet.crc  duckdb-55f9caed-30f0-46ae-9500-5df43a2e556b.parquet  part-00000-2a127e6f-64de-400f-ac79-e374b7720814-c000.snappy.parquet  part-00013-84e4060b-787f-498b-988e-f6707b796a52-c000.snappy.parquet
data/inlined/variant/basic/_delta_log/: .00000000000000000000.crc.crc  .00000000000000000000.json.crc  .00000000000000000001.crc.crc  .00000000000000000001.json.crc
scripts/: env_minio  generate_golden_table_tests.py  generate_test_data.py  idempotent_writes_demo.py  unwrap_golden_tables.sh
scripts/data_generator/: generate_test_data.py
scripts/data_generator/delta_rs_generator/: __init__.py
scripts/data_generator/pyspark_generator/: __init__.py
scripts/ffi/: generate_delta_kernel_ffi_header  inline_msvc_compat.inc  prefix.inc  suffix.inc
src/: delta_extension.cpp  delta_functions.cpp  delta_log_types.cpp  delta_macros.cpp  delta_utils.cpp  path.cpp  path_utils.cpp
src/functions/: delta_domain_metadata.cpp  delta_metadata_scan.cpp  delta_scan.cpp  expression_functions.cpp  metadata_functions.cpp  util_functions.cpp
src/functions/delta_scan/: delta_multi_file_list.cpp  delta_multi_file_reader.cpp  delta_scan.cpp
src/functions/delta_transaction_utils/: idempotency_helpers.cpp
src/include/: delta_extension.hpp  delta_functions.hpp  delta_kernel_ffi.hpp  delta_log_types.hpp  delta_macros.hpp  delta_utils.hpp  path.hpp  path_utils.hpp
src/include/functions/: delta_scan.hpp
src/include/functions/delta_scan/: delta_multi_file_list.hpp  delta_multi_file_reader.hpp  delta_scan.hpp
src/include/storage/: delta_catalog.hpp  delta_insert.hpp  delta_schema_entry.hpp  delta_table_entry.hpp  delta_transaction.hpp
src/storage/: delta_catalog.cpp  delta_insert.cpp  delta_schema_entry.cpp  delta_table_entry.cpp  delta_transaction.cpp  delta_transaction_manager.cpp
test/sql/cloud/: gcs.test
test/sql/cloud/azure/: cli_auth.test  hierarchical_namespace.test  spn_auth.test  unauthenticated.test
test/sql/cloud/azurite/: azurite.test
test/sql/cloud/minio_local/: gcs_r2.test  minio_local.test  minio_no_head_calls.test
test/sql/dat/: all.test  attach.test  basic_append.test  custom_parameters.test
test/sql/delta_kernel_rs/: basic_partitioned.test  logging.test  simple_with_dv.test  simple_without_dv.test
test/sql/golden_tests/: generated.test  generated.test_slow
test/sql/inlined/variant/: basic.test  write_stats_no_variant_stats.test
test/sql/issues/: null_stats_conversion__issue_297.test  partition_equality_filter__issue_303.test
test/sql/main/: test_error_messages.test  test_expression.test  unshredded_variant.test
test/sql/main/writing/: checkpoint.test  delta_scan_version.test  incremental_snapshot.test  non_nullable.test  transaction_multi_insert.test  write_to_versioned_attach.test
